2006-12-07 Dan Dennedy <dan@dennedy.org
	Applied patch from Stephane Fillod to make configure run with bash
	since it uses bash-specific features. Also, patches headers to 
	C comments for pedantic compilation.

2006-09-28 Zachary Drew <zachary.drew@gmail.com>
	applied audio frequency and audio channels initialization patch from Jean-Baptiste

2006-09-27 Zachary Drew <zachary.drew@gmail.com>
	applied amd64 patch from gentoo folks to fix compilation of motion_est
	on amd64 (thanks for the heads-up Jean-Michel)


2006-09-25 Dan Dennedy <dan@dennedy.org>
	- src/modules/sdl/Makefile: fix compilation on some systems using
	  modular x.org.

2006-08-08 Dan Dennedy <dan@dennedy.org>
	enhance producer_westley to parse Kino 0.9.1 SMIL (clock) time values. 

2006-08-08 Dan Dennedy <dan@dennedy.org>
	convert --avformat-cvs to svn and rename option as --avformat-svn (--avformat-cvs is an undocumented alias). 
