@@ -1,3 +1,7 @@
+2007-02-07 Dan Dennedy <dan@dennedy.org>
+	Added ffmpeg libswscale support to avformat module (requires configure
+	option --avformat-swscale)
+
 2006-12-07 Dan Dennedy <dan@dennedy.org
 	Applied patch from Stephane Fillod to make configure run with bash
 	since it uses bash-specific features. Also, patches headers to 
